; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_timer_set_params.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_timer_set_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32* }
%struct.filt_timer_params = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.knote*, %struct.filt_timer_params*)* @filt_timer_set_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filt_timer_set_params(%struct.knote* %0, %struct.filt_timer_params* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.filt_timer_params*, align 8
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.filt_timer_params* %1, %struct.filt_timer_params** %4, align 8
  %5 = load %struct.filt_timer_params*, %struct.filt_timer_params** %4, align 8
  %6 = getelementptr inbounds %struct.filt_timer_params, %struct.filt_timer_params* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.knote*, %struct.knote** %3, align 8
  %9 = getelementptr inbounds %struct.knote, %struct.knote* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %7, i32* %11, align 4
  %12 = load %struct.filt_timer_params*, %struct.filt_timer_params** %4, align 8
  %13 = getelementptr inbounds %struct.filt_timer_params, %struct.filt_timer_params* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.knote*, %struct.knote** %3, align 8
  %16 = getelementptr inbounds %struct.knote, %struct.knote* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  store i32 %14, i32* %18, align 4
  %19 = load %struct.filt_timer_params*, %struct.filt_timer_params** %4, align 8
  %20 = getelementptr inbounds %struct.filt_timer_params, %struct.filt_timer_params* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.knote*, %struct.knote** %3, align 8
  %23 = getelementptr inbounds %struct.knote, %struct.knote* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
